[package]
name = "market_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
upstair_type.workspace = true
tracing.workspace = true
anyhow.workspace = true
account.workspace = true
symbol_info.workspace = true
yata.workspace = true
