[package]
name = "pure_market_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stepper_world.workspace = true
upstair_type.workspace = true
tracing.workspace = true
symbol_info.workspace = true
yata.workspace = true
polars.workspace = true
